k8s/scanner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeguard-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeguard
  template:
    metadata:
      labels:
        app: kubeguard
    spec:
      containers:
      - name: kubeguard-container
        image: kubeguard-app:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
