k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeguard-service
spec:
  type: NodePort
  selector:
    app: kubeguard
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
